# koide-soddy

./: .gitignore  LICENSE  README.md  pyproject.toml
results/: error_budget.json  filter_sensitivity.json  input_sensitivity.json  ms_history.csv  null_loose.json  null_tight.json  null_tight_residuals.npy  prior_sensitivity.json  scale_alternatives.json  scale_sensitivity.json
scripts/: 01_verify_central_claim.py  02_scale_sensitivity.py  03_input_sensitivity.py  04_null_model_tight.py  05_null_model_loose.py  06_make_figures.py  07_prior_sensitivity.py  08_scale_alternatives.py  09_filter_sensitivity.py  10_error_budget.py  11_dissent_response_summary.py
src/koide_soddy/: __init__.py  error_budget.py  figures.py  filter_sensitivity.py  leptons.py  null_model.py  prior_sensitivity.py  running.py  scale_alternatives.py  sensitivity.py
tests/: test_leptons.py  test_null_model.py  test_running.py
